# holiday-api

./: Cargo.toml  LICENSE  README.md  holidays.php
data/: 2023-ru.json
public/: index.php
src/: holiday.rs  main.rs  routes.rs
templates/: index.html.hbs
