[package]
name = "holiday-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = "0.4.23"
regex = "1.7.1"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
